--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,6 +9,21 @@ permissions:
   contents: read
   pull-requests: write
 jobs:
+  build_and_test:
+    name: rust-lambdas
+    runs-on: ubuntu-latest
+    working-directory: health
+    strategy:
+      matrix:
+        toolchain:
+          - stable
+    steps:
+      - uses: actions/checkout@v4
+      - run: pip3 install cargo-lambda
+      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - run: cargo lambda build --arm64 --release
+      - run: cargo test --verbose
+
   deploy-infrastructure:
     runs-on: ubuntu-latest
     steps:
