--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,10 +19,12 @@ jobs:
           - stable
     steps:
       - uses: actions/checkout@v4
-      - run: pip3 install cargo-lambda
-      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-      - run: cargo lambda build --arm64 --release
-      - run: cargo test --verbose
+      - run: |
+          pip3 install cargo-lambda
+          rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+          cargo lambda build --arm64 --release
+          cargo test --verbose
+        working-directory: health
 
   deploy-infrastructure:
     runs-on: ubuntu-latest
