--- a/cli-client/Cargo.toml
+++ b/cli-client/Cargo.toml
@@ -1,16 +1,14 @@
 [package]
-name = "strike"
+name = "strikes"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 path = "src/lib.rs"
 
 [[bin]]
 path = "src/main.rs"
-name = "zero2prod"
+name = "strikes"
 
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
