--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,7 +3,7 @@ defaults:
     shell: bash
     working-directory: infrastructure
 name: Deploy
-on: [push, pull_request]
+on: [pull_request]
 permissions:
   id-token: write
   contents: read
@@ -42,10 +42,10 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        #if: github.event.name == 'pull_request'
+        if: github.event.name == 'pull_request'
         run: terraform plan
       
       - name: Terraform Apply
         id: apply
-        #if: github.ref == 'refs/head/main' && github.event_name == 'push'
+        if: github.ref == 'refs/head/main' && github.event_name == 'push'
         run: terraform apply -auto-approve
