--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,11 +16,11 @@ jobs:
       - uses: hashicorp/setup-terraform@v1
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.AWS_OIDC_ASSUME_ROLE_ARN }}
           aws-region: eu-central-1
+          role-session-name: GitHub-OIDC-TF
 
       - name: Terraform Init
         run: terraform init
