--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,11 +9,10 @@ permissions:
   contents: read
   pull-requests: write
 jobs:
-  deploy-infrastructure:
+  build-lambdas:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v3
 
       - name: Build & Test lambda
         run: |
@@ -22,6 +21,12 @@ jobs:
           cargo lambda build --arm64 --release
           cargo test --verbose
         working-directory: infrastructure/health
+
+  deploy-infrastructure:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: hashicorp/setup-terraform@v3
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
