--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,6 +24,7 @@ jobs:
 
   deploy-infrastructure:
     runs-on: ubuntu-latest
+    needs: build-lambdas
     steps:
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
