--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,7 +9,16 @@ permissions:
   contents: read
   pull-requests: write
 jobs:
-  deploy-infrastructure:
+  cli-client:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - run: rustup update stable && rustup default stable
+      - run: cargo build --verbose
+      - run: cargo test --verbose
+
+  infrastructure:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
