--- a/cli-client/Cargo.toml
+++ b/cli-client/Cargo.toml
@@ -14,3 +14,6 @@ name = "strikes"
 clap = { version = "4.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 reqwest = "0.11"
+serde = "1.0.208"
+config = "0.14.0"
+serde_json = "1.0"
