--- a/cli-client/Cargo.toml
+++ b/cli-client/Cargo.toml
@@ -17,3 +17,8 @@ reqwest = "0.11"
 serde = "1.0.208"
 config = "0.14.0"
 serde_json = "1.0"
+
+[dev-dependencies]
+assert_cmd = "2.0.16"
+assert_fs = "1.1.2"
+predicates = "3.1.2"
