--- a/.github/workflows/cli-client.yml
+++ b/.github/workflows/cli-client.yml
@@ -27,7 +27,7 @@ jobs:
         run: cargo test
 
   fmt:
-    name: Rustfmt
+    name: Format
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
