Provide option to configure local db path

--- a/cli-client/tests/fixtures/valid_config.yaml
+++ b/cli-client/tests/fixtures/valid_config.yaml
@@ -1,2 +1,5 @@
-api_key: abc
-base_url: https://example.com
+remote:
+  api_key: abc
+  base_url: https://example.com
+local:
+  db_path: /Home/.strikes
