--- a/cli-client/Cargo.toml
+++ b/cli-client/Cargo.toml
@@ -17,6 +17,7 @@ reqwest = "0.11"
 serde = "1.0.208"
 config = "0.14.0"
 serde_json = "1.0"
+openssl = { version = "0.10", features = ["vendored"] }
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
