Update release pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,3 +71,6 @@ jobs:
       - name: Move binary to release directory
         run: mv target/${{ matrix.target }}/release/strikes artifacts/strikes/strikes-${{ env.VERSION }}-${{ matrix.target }}
 
+      - name: Create tarball
+        run: tar -czf artifacts/strikes-${{ env.VERSION }}-${{ matrix.target }}.tar.gz -C artifacts/strikes strikes-${{ env.VERSION }}-${{ matrix.target }}
+
