Update release pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build:
-    name: Build artifacts
+    name: Build artifact
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -72,19 +72,21 @@ jobs:
         run: mv target/${{ matrix.target }}/release/strikes artifacts/strikes/strikes-${{ env.VERSION }}-${{ matrix.target }}
 
       - name: Create tarball
-        run: tar -czf artifacts/strikes-${{ env.VERSION }}-${{ matrix.target }}.tar.gz -C artifacts/strikes strikes-${{ env.VERSION }}-${{ matrix.target }}
+        run: tar -czf artifacts/strikes-${{ env.VERSION }}-${{ matrix.target }}.tar.gz -C artifacts strikes-${{ env.VERSION }}-${{ matrix.target }}
 
       - name: Upload tarball
         uses: actions/upload-artifact@v4
         with:
           name: strikes-${{ env.VERSION }}-${{ matrix.target }}
-          path: /artifacts/strikes
+          path: /artifacts
   
   release:
     name: Release artifacts
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: actions/checkout@v4
+
       - name: Get release version number
         if: env.VERSION == ''
         run: echo "VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
