Update release pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,10 +66,10 @@ jobs:
         run: cross build --release --target ${{ matrix.target }}
 
       - name: Create release directory
-        run: mkdir -p artifacts/strikes/strikes-${{ env.VERSION }}-${{ matrix.target }}
+        run: mkdir -p artifacts/strikes-${{ env.VERSION }}-${{ matrix.target }}
 
       - name: Move binary to release directory
-        run: mv target/${{ matrix.target }}/release/strikes artifacts/strikes/strikes-${{ env.VERSION }}-${{ matrix.target }}
+        run: mv target/${{ matrix.target }}/release/strikes artifacts/strikes-${{ env.VERSION }}-${{ matrix.target }}
 
       - name: Create tarball
         run: tar -czf artifacts/strikes-${{ env.VERSION }}-${{ matrix.target }}.tar.gz -C artifacts strikes-${{ env.VERSION }}-${{ matrix.target }}
