--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,12 +73,15 @@ jobs:
 
       - name: Create tarball
         run: tar -czf strikes-${{ env.VERSION }}-${{ matrix.target }}.tar.gz -C artifacts strikes-${{ env.VERSION }}-${{ matrix.target }}
+      
+      - name: List files for debugging
+        run: ls -la
 
       - name: Upload tarball
         uses: actions/upload-artifact@v4
         with:
           name: strikes-${{ env.VERSION }}-${{ matrix.target }}
-          path: ./artifacts
+          path: 
   
   release:
     name: Release artifacts
