--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,6 +77,9 @@ jobs:
       - name: List files for debugging
         run: ls -la
 
+      - name: List files in artifacts directory
+        run: ls -la ./artifacts
+
       - name: Upload tarball
         uses: actions/upload-artifact@v4
         with:
