--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,6 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
         include:
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
@@ -100,12 +99,12 @@ jobs:
       - name: Download arm64 tarball
         uses: actions/download-artifact@v4
         with:
-          name: strikes-${{ env.VERSION }}-aarch64-unknown-linux-musl
+          name: ./cli-client/artifacts/strikes-${{ env.VERSION }}-aarch64-unknown-linux-musl
 
       - name: Download x86_64 tarball
         uses: actions/download-artifact@v4
         with:
-          name: strikes-${{ env.VERSION }}-x86_64-unknown-linux-musl
+          name: ./cli-client/artifacts/strikes-${{ env.VERSION }}-x86_64-apple-darwin
 
       - name: Release arm64 tarball
         uses: softprops/action-gh-release@v1
@@ -117,4 +116,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            strikes-${{ env.VERSION }}-x86_64-unknown-linux-musl.tar.gz
+            strikes-${{ env.VERSION }}-x86_64-apple-darwin.tar.gz
