Update release pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,21 +99,32 @@ jobs:
       - name: Download arm64 tarball
         uses: actions/download-artifact@v4
         with:
-          name: ./cli-client/artifacts/strikes-${{ env.VERSION }}-aarch64-unknown-linux-musl.tar.gz
+          name: strikes-${{ env.VERSION }}-aarch64-unknown-linux-musl
 
       - name: Download x86_64_apple_darwin tarball
         uses: actions/download-artifact@v4
         with:
-          name: ./cli-client/artifacts/strikes-${{ env.VERSION }}-x86_64-apple-darwin.tar.gz
+          name: strikes-${{ env.VERSION }}-x86_64-apple-darwin.tar.gz
+
+      - name: Download x86_64 tarball
+        uses: actions/download-artifact@v4
+        with:
+          name: strikes-${{ env.VERSION }}-x86_64-unknown-linux-musl 
+
+      - name: Release arm64 tarball
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            strikes-${{ env.VERSION }}-aarch64-unknown-linux-musl
+      
+      - name: Release x86_64_apple_darwin tarball
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            strikes-${{ env.VERSION }}-x86_64-apple-darwin
 
       - name: Release x86_64 tarball
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            strikes-${{ env.VERSION }}-x86_64-unkown-linux-musl.tar.gz
-      
-      - name: Release x86_64 tarball
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            strikes-${{ env.VERSION }}-x86_64-apple-darwin.tar.gz
+            strikes-${{ env.VERSION }}-x86_64-unknown-linux-musl
