--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,6 +96,12 @@ jobs:
         if: env.VERSION == ''
         run: echo "VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
 
+      - name: Debug
+        uses: actions/download-artifact@v4
+
+      - name: List files
+        run: ls -R
+
       - name: Download arm64 tarball
         uses: actions/download-artifact@v4
         with:
