--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -122,16 +122,16 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            strikes-${{ env.VERSION }}-aarch64-unknown-linux-musl
+            strikes-${{ env.VERSION }}-aarch64-unknown-linux-musl.tar.gz
       
       - name: Release x86_64_apple_darwin tarball
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            strikes-${{ env.VERSION }}-x86_64-apple-darwin
+            strikes-${{ env.VERSION }}-x86_64-apple-darwin.tar.gz
 
       - name: Release x86_64 tarball
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            strikes-${{ env.VERSION }}-x86_64-unknown-linux-musl
+            strikes-${{ env.VERSION }}-x86_64-unknown-linux-musl.tar.gz
