Store strikes locally (#4)

--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -1,15 +1,24 @@
+name: Infrastructure
 defaults:
   run:
     shell: bash
     working-directory: infrastructure
-name: Deploy
-on: [pull_request]
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 permissions:
   id-token: write
   contents: read
   pull-requests: write
+
 jobs:
-  deploy-infrastructure:
+  infrastructure:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -42,7 +51,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        if: github.event == 'pull_request'
+        if: github.event_name == 'pull_request'
         run: terraform plan
       
       - name: Terraform Apply
