--- a/cli-client/Cargo.toml
+++ b/cli-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "strikes"
-version = "0.0.1"
+version = "0.0.1-alpha"
 edition = "2021"
 
 [lib]
@@ -14,3 +14,12 @@ name = "strikes"
 clap = { version = "4.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 reqwest = "0.11"
+serde = "1.0.208"
+config = "0.14.0"
+serde_json = "1.0"
+openssl = { version = "0.10", features = ["vendored"] }
+
+[dev-dependencies]
+assert_cmd = "2.0.16"
+assert_fs = "1.1.2"
+predicates = "3.1.2"
