Refactor config to get default settings when not settings were found

--- a/cli-client/tests/fixtures/valid_config.yaml
+++ b/cli-client/tests/fixtures/valid_config.yaml
@@ -1,5 +1,6 @@
+use_remote: true
 remote:
   api_key: abc
   base_url: https://example.com
 local:
-  db_path: /Home/.strikes
+  db_path: /home/user/.strikes
