--- a/cli-client/Cargo.toml
+++ b/cli-client/Cargo.toml
@@ -18,6 +18,7 @@ serde = "1.0.208"
 config = "0.14.0"
 serde_json = "1.0"
 openssl = { version = "0.10", features = ["vendored"] }
+async-trait = "0.1.81"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
