--- a/infrastructure/lambdas/Cargo.toml
+++ b/infrastructure/lambdas/Cargo.toml
@@ -17,3 +17,4 @@ aws-sdk-dynamodb = "1.42.0"
 lambda_http = "0.13.0"
 tokio = { version = "1", features = ["macros"] }
 serde_json = "1.0"
+uuid = { version = "1.10.0", features = ["v4"] }
