Use hoverkraft-tech to run docker-compose up

--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -27,8 +27,7 @@ jobs:
       - name: Run docker-compose
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
-          compose-file: "docker-compose.yml"
-        working-directory: infrastructure/lambdas/tests
+          compose-file: "lambdas/tests/docker-compose.yml"
 
       - name: Build & Test lambda
         run: |
