--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -30,6 +30,9 @@ jobs:
           compose-file: "infrastructure/lambdas/tests/docker-compose.yml"
 
       - name: Build & Test lambda
+        env: 
+          AWS_ACCESS_KEY_ID: 223344
+          AWS_SECRET_ACCESS_KEY: wJalrXUtTHISI/DYNAMODB/bPxRfiCYEXAMPLEKEY
         run: |
           pip3 install cargo-lambda
           rustup update stable && rustup default stable
