--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           pip3 install cargo-lambda
           rustup update stable && rustup default stable
+          cargo lambda build --release
           cargo test --verbose
         working-directory: infrastructure/lambdas
 
