--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -24,13 +24,22 @@ jobs:
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
 
+      - name: Run docker-compose
+        uses: hoverkraft-tech/compose-action@v2.0.1
+        with:
+          compose-file: "infrastructure/lambdas/tests/docker-compose.yml"
+
       - name: Build & Test lambda
+        env:
+          AWS_DEFAULT_REGION: eu-central-1
+          AWS_ACCESS_KEY_ID: 223344
+          AWS_SECRET_ACCESS_KEY: wJalrXUtTHISI/DYNAMODB/bPxRfiCYEXAMPLEKEY
         run: |
           pip3 install cargo-lambda
           rustup update stable && rustup default stable
-          cargo lambda build --arm64 --release
+          cargo lambda build --release
           cargo test --verbose
-        working-directory: infrastructure/health
+        working-directory: infrastructure/lambdas
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
