--- a/infrastructure/lambdas/Cargo.toml
+++ b/infrastructure/lambdas/Cargo.toml
@@ -4,12 +4,19 @@ version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-path = "src/put_strikes.rs"
-name = "put_strikes"
+path = "src/put_strike.rs"
+name = "put_strike"
 
 [[bin]]
 path = "src/health.rs"
 name = "health"
+
+[[bin]]
+path = "src/get_strikes.rs"
+name = "get_strikes"
+
+[lib]
+path = "src/lib.rs"
 
 [dependencies]
 aws-config = "1.5.5"
