--- a/cli-client/Cargo.toml
+++ b/cli-client/Cargo.toml
@@ -19,6 +19,7 @@ config = "0.14.0"
 serde_json = "1.0"
 openssl = { version = "0.10", features = ["vendored"] }
 async-trait = "0.1.81"
+comfy-table = "7.1.1"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
