Change config directory from .strikes to .config

--- a/cli-client/tests/fixtures/valid_config.yaml
+++ b/cli-client/tests/fixtures/valid_config.yaml
@@ -1,6 +1,5 @@
-use_remote: true
 remote:
   api_key: abc
   base_url: https://example.com
 local:
-  db_path: /home/user/.strikes
+  db_path: /home/user/.config/strikes/db.json
