--- a/infrastructure/lambdas/Cargo.toml
+++ b/infrastructure/lambdas/Cargo.toml
@@ -19,6 +19,14 @@ name = "put_strike"
 path = "src/health.rs"
 name = "health"
 
+[[bin]]
+path = "src/websocket/connect.rs"
+name = "connect"
+
+[[bin]]
+path = "src/websocket/disconnect.rs"
+name = "disconnect"
+
 [lib]
 path = "src/lib.rs"
 name = "lib"
@@ -27,6 +35,7 @@ name = "lib"
 aws-config = "1.5.5"
 aws-sdk-dynamodb = "1.42.0"
 lambda_http = "0.13.0"
-tokio = { version = "1", features = ["macros"] }
 serde_json = "1.0"
+serde = "1.0.208"
+tokio = { version = "1", features = ["macros"] }
 uuid = { version = "1.10.0", features = ["v4"] }
