--- a/infrastructure/lambdas/Cargo.toml
+++ b/infrastructure/lambdas/Cargo.toml
@@ -27,6 +27,10 @@ name = "connect"
 path = "src/websocket/disconnect.rs"
 name = "disconnect"
 
+[[bin]]
+path = "src/websocket/strikes_update.rs"
+name = "strikes_update"
+
 [lib]
 path = "src/lib.rs"
 name = "lib"
@@ -34,6 +38,7 @@ name = "lib"
 [dependencies]
 aws-config = "1.5.5"
 aws-sdk-dynamodb = "1.42.0"
+aws-sdk-apigatewaymanagement = "1.42.0"
 lambda_http = "0.13.0"
 serde_json = "1.0"
 serde = "1.0.208"
