--- a/infrastructure/lambdas/Cargo.toml
+++ b/infrastructure/lambdas/Cargo.toml
@@ -37,6 +37,7 @@ name = "lib"
 
 [dependencies]
 aws-config = "1.5.5"
+aws_lambda_events = "0.15.1"
 aws-sdk-dynamodb = "1.42.0"
 aws-sdk-apigatewaymanagement = "1.42.0"
 lambda_http = "0.13.0"
