--- a/infrastructure/lambdas/Cargo.toml
+++ b/infrastructure/lambdas/Cargo.toml
@@ -19,14 +19,29 @@ name = "put_strike"
 path = "src/health.rs"
 name = "health"
 
+[[bin]]
+path = "src/websocket/connect.rs"
+name = "connect"
+
+[[bin]]
+path = "src/websocket/disconnect.rs"
+name = "disconnect"
+
+[[bin]]
+path = "src/websocket/strikes_update.rs"
+name = "strikes_update"
+
 [lib]
 path = "src/lib.rs"
 name = "lib"
 
 [dependencies]
 aws-config = "1.5.5"
+aws_lambda_events = "0.15.1"
 aws-sdk-dynamodb = "1.42.0"
+aws-sdk-apigatewaymanagement = "1.42.0"
 lambda_http = "0.13.0"
-tokio = { version = "1", features = ["macros"] }
 serde_json = "1.0"
+serde = "1.0.208"
+tokio = { version = "1", features = ["macros"] }
 uuid = { version = "1.10.0", features = ["v4"] }
