--- a/infrastructure/lambdas/Cargo.toml
+++ b/infrastructure/lambdas/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [[bin]]
+path = "src/website.rs"
+name = "website"
+
+[[bin]]
 path = "src/get_strikes.rs"
 name = "get_strikes"
 
@@ -36,12 +40,13 @@ path = "src/lib.rs"
 name = "lib"
 
 [dependencies]
-aws-config = "1.5.5"
+aws-config = "1.5.6"
 aws_lambda_events = "0.15.1"
-aws-sdk-dynamodb = "1.42.0"
-aws-sdk-apigatewaymanagement = "1.42.0"
+aws-sdk-dynamodb = "1.47.0"
+aws-sdk-apigatewaymanagement = "1.43.0"
+handlebars = "6.1.0"
 lambda_http = "0.13.0"
 serde_json = "1.0"
 serde = "1.0.208"
-tokio = { version = "1", features = ["macros"] }
-uuid = { version = "1.10.0", features = ["v4"] }
+tokio = { version = "1", features = ["full"] }
+aws-sdk-s3 = "1.51.0"
